tpl : Added another filter button to show "all" on player boards UI  : Switched "Prototype" font to "Kanit" bold (Google fonts). The font is labeled "SpaceFont" in css for easier future changes       Adjusted various UI elements and font sizes to fit the new font geometry       Added a all_city local counter to check for card prereq all_city       Moved "hand","draft","draw" label by a few pixels       Fixed alignment issues caused by red border in cards effects

--- a/src/css/Card.scss
+++ b/src/css/Card.scss
@@ -49,7 +49,7 @@
 }
 
 .card_cost {
-  font-family: "Prototype";
+  font-family: "SpaceFont";
   position: absolute;
   top: 0%;
   width: calc(var(--card-width) * 0.16);
@@ -83,15 +83,15 @@
 }
 
 .card_title{
-  font-family: "Prototype";
+  font-family: "SpaceFont";
   position: absolute;
-  top: 11%;
+  top: 9.7%;
   left: 4%;
   width: 92%;
   display: flex;
   justify-content: center;
   text-transform: uppercase;
-  font-size: calc(var(--card-width) * 0.06);
+  font-size: calc(var(--card-width) * 0.067);
   overflow: hidden;
   height: 6%;
 }
@@ -181,7 +181,7 @@
   align-items: center;
   justify-content: center;
   text-shadow: #fff 0px 0px 2px, #fff 0px 0px 2px, #fff 0px 0px 2px, #fff 0px 0px 2px, #fff 0px 0px 2px, #fff 0px 0px 2px;
-  font-family: 'Prototype';
+  font-family: 'SpaceFont';
 }
 
 
@@ -259,7 +259,7 @@ display: none;
   top: 60%;
   right: 3%;
   font-size: calc(var(--card-width) * 0.04);
-  font-family: "Prototype";
+  font-family: "SpaceFont";
   padding: calc(var(--card-width) * 0.005);
   background: #c1c1c1;
   border: 1px solid black;
@@ -267,19 +267,19 @@ display: none;
 
 .card_number_binary{
   position: absolute;
-  top: 63.3%;
+  top: 62.3%;
   left: 36%;
   width: 28%;
   display: flex;
   font-size: calc(var(--card-width) * 0.05);
-  font-family: "Prototype";
+  font-family: "SpaceFont";
   opacity: 0.3;
   justify-content: center;
 }
 
 .card[data-card-type="2"] {
   .card_number_binary {
-    top: 74.2%;
+    top: 73.8%;
   }
   .card_number {
     top: 65.2%;
@@ -288,7 +288,7 @@ display: none;
 
 .card[data-card-type="3"] {
     .card_number_binary {
-      top: 61.2%;
+      top: 60.5%;
     }
     .card_number {
       top: 56.5%;
@@ -304,7 +304,7 @@ display: none;
   height: 96%;
   flex-shrink:0;
   text-shadow: #fff 0px 0px 2px, #fff 0px 0px 2px, #fff 0px 0px 2px, #fff 0px 0px 2px, #fff 0px 0px 2px, #fff 0px 0px 2px;
-  font-family: 'Prototype';
+  font-family: 'SpaceFont';
 
   .tile{
     width: calc(var(--card-width) * 0.15);
@@ -364,10 +364,15 @@ display: none;
     margin-right: calc(var(--card-width) * 0.01);
   }
   .outer_redborder{
+    /*
     width: calc(var(--card-width) * 0.15);
-    height: calc(var(--card-width) * 0.15);
+    height: calc(var(--card-width) * 0.15);*/
+    width: var(--resourcesize);
+    height: var(--resourcesize);
     .token_img {
       margin-right: 0;
+      width: calc(var(--resourcesize) * 0.85);
+      height: calc(var(--resourcesize) * 0.85);
     }
 
   }
@@ -475,10 +480,10 @@ display: none;
 
 .card_prereq{
   position: absolute;
-  top: 3%;
+  top: 2.8%;
   left: 21%;
-  font-family: "Prototype";
-  font-size: calc(var(--card-width) * 0.06);
+  font-family: "SpaceFont";
+  font-size: calc(var(--card-width) * 0.065);
   /*background: #f7d543;*/
   height: 6.2%;
   --resourcesize: calc(var(--card-width) * 0.08);
@@ -502,6 +507,15 @@ display: none;
 }
 
 .prereq_content {
+
+  display: flex;
+  width: fit-content;
+  min-width: calc(var(--card-width) * 0.22);
+  padding-left: calc(var(--card-width) * 0.01);
+  background: radial-gradient(circle, rgb(255, 232, 10) 0%, rgb(231, 164, 3) 100%);
+  align-items: center;
+  height: calc(var(--card-width) * 0.09);
+
   .token_img {
     margin-right:0;
   }
@@ -555,16 +569,10 @@ display: none;
   flex-direction: row-reverse;
 }
 
-.prereq_content{
-  display: block;
-  width: fit-content;
-  min-width: calc(var(--card-width) * 0.22);
-  padding-left: calc(var(--card-width) * 0.01);
-  background: radial-gradient(circle, rgba(255,232,10,1) 0%, rgb(231, 164, 3) 100%);
-}
+
 .card .prereq_content > * {
-  display: inline-block;
-  vertical-align: middle;
+  /*display: inline-block;
+  vertical-align: middle;*/
 }
 
 .card .prereq_content > .outer_production {
@@ -590,13 +598,18 @@ display: none;
   position: absolute;
   bottom: 1%;
   right: 1%;
-  font-family: "Prototype";
+  font-family: "SpaceFont";
   color: white;
   display: flex;
   justify-content: center;
   align-items: center;
   pointer-events: none;
-  font-size: calc(var(--card-width) * 0.1);
+  font-size: calc(var(--card-width) * 0.12);
+
+  .number_inside{
+    top: -5%;
+    position: relative;
+  }
 }
 
 .card .badge{
@@ -1068,7 +1081,7 @@ display: none;
     background: #d0c6b7a6;
     font-weight: lighter;
     font-size: calc(var(--card-width) * 0.08);
-    font-family: "Prototype";
+    font-family: "SpaceFont";
   }
 
   .tt_intertitle {
@@ -1076,7 +1089,7 @@ display: none;
     display: flex;
     justify-content: center;
     font-size: calc(var(--card-width) * 0.07);
-    font-family: "Prototype";
+    font-family: "SpaceFont";
   }
   .tt_linegroup{
     width: 100%;
@@ -1187,13 +1200,13 @@ display: none;
 }
 
 .mcompact {
-  .card .resource{
+  .card .resource {
     width: calc(var(--card-width) * 0.08);
     height: calc(var(--card-width) * 0.08);
     margin-right: 2%;
   }
 
-  .card_resource_holder{
+  .card_resource_holder {
     display: flex;
     justify-content: flex-start;
     flex-wrap: wrap;
@@ -1203,20 +1216,20 @@ display: none;
     width: 94%;
     color: black;
 
-    font-size: calc(var(--resourcesize)*0.8);
+    font-size: calc(var(--resourcesize) * 0.8);
     text-shadow: #fff 0px 0px 2px, #fff 0px 0px 2px, #fff 0px 0px 2px, #fff 0px 0px 2px, #fff 0px 0px 2px, #fff 0px 0px 2px;
-    font-family: "Prototype";
+    font-family: "SpaceFont";
 
-    .card_line_holder{
+    .card_line_holder {
       width: 100%;
       display: flex;
       justify-content: center;
       align-items: center;
     }
 
-    .token_img{
-      width: calc(var(--resourcesize)*0.8);
-      height: calc(var(--resourcesize)*0.8);
+    .token_img {
+      width: calc(var(--resourcesize) * 0.8);
+      height: calc(var(--resourcesize) * 0.8);
       border: 2px solid white;
       background-color: white;
       border-radius: 4px;
@@ -1225,17 +1238,20 @@ display: none;
     .resource_counter::after {
       content: attr(data-resource_counter);
     }
-    .counter_sep{
+
+    .counter_sep {
       padding-left: calc(var(--resourcesize) * 0.1);
       padding-right: calc(var(--resourcesize) * 0.2);
     }
   }
-  .card_resource_holder[data-resource_counter="0"]{
+
+  .card_resource_holder[data-resource_counter="0"] {
 
     display: none;
   }
-  .card_resource_holder[data-resource_counter="1"]{
-    .resource_counter,.counter_sep{
+
+  .card_resource_holder[data-resource_counter="1"] {
+    .resource_counter, .counter_sep {
       display: none;
     }
   }
@@ -1244,12 +1260,10 @@ display: none;
     display: none;
   }
 
-  .before{
+  .before {
     visibility: hidden;
   }
 }
-
-
 
 @keyframes showme {
   0%{
