--- a/src/css/CustomPay.scss
+++ b/src/css/CustomPay.scss
@@ -2,7 +2,7 @@
   --resourcesize: 30px;
 
   .token_img {
-    font-family: Prototype;
+    font-family: SpaceFont;
     margin-left: 5px;
   }
 
@@ -77,7 +77,7 @@
 }
 
 .payment_item_value{
-  font-family: "Prototype";
+  font-family: "SpaceFont";
   display: flex;
   justify-content: center;
   align-items: center;
